# The-Switchblade-Btach-Converter-and-cutter

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  claude.md  setup.bat
CLI/: analyze_cli.cpp
Source/: Main.cpp
Source/Analysis/: AdaptiveThreshold.h  AnalysisEngine.cpp  AnalysisEngine.h  AudioFile.h  NoteSegmenter.h  PitchDetector.h  SliceBoundary.h  SpectralFlux.cpp  SpectralFlux.h  TextureAnalyzer.cpp  TextureAnalyzer.h  TransientDetector.cpp  TransientDetector.h  ZeroCrossing.h
Source/Core/: Palette.h
Source/UI/: FrostedGlassPanel.cpp  FrostedGlassPanel.h  MainContainer.cpp  MainContainer.h  NeonBloomShader.cpp  NeonBloomShader.h  PreviewGrid.cpp  PreviewGrid.h  ResultTile.cpp  ResultTile.h  ResultsVault.cpp  ResultsVault.h  SampleCard.cpp  SampleCard.h  Shaders.h  SwitchbladeLookAndFeel.cpp  SwitchbladeLookAndFeel.h
docs/: analysis-architecture.md  building.md  changelog.md  user-guide.md
tests/: CMakeLists.txt  analysis_perf_test.cpp
